--- a/src/app/landing-page/sections/a-hero/a-hero.component.scss
+++ b/src/app/landing-page/sections/a-hero/a-hero.component.scss
@@ -72,7 +72,7 @@
         font-size: 8rem;
         font-weight: bold;
         padding-bottom: 40px;
-        letter-spacing: -4px;
+        letter-spacing: -2px;
 
         @media screen and (max-width: 1100px) {
           font-size: 3rem;
